--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=opt-service
+spring.application.app-key=tokoin-otp-c2cc3496-c9f8-4068-a83c-82841b44727b
+#Redis configuration
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
-spring.redis.timeout=2000
-spring.cache.redis.time-to-live=30
+spring.cache.redis.time-to-live=60
